<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">doorlock</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Registration</string>
    <string name="register_now">Register_Now</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click_to_register</string>
    <string name="log_out">Log_Out</string>
    <string name="check_lock_status">Check Lock Status</string>
    <string name="manage_users">Manage Users</string>
    <string name="unlock_for_time_period">Unlock for Time Period</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="enter_pin_to_unlock">Enter PIN to Unlock</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="Back">⌫</string>
    <string name="Pin">----</string>
    <string name="ok">✔</string>
    <string name="lock_status">Lock Status</string>
    <string name="refresh_status">Refresh Status</string>
    <string name="unknown">Unknown</string>
    <string name="unlock_for_all">Unlock_for_all</string>
    <string name="unlock_all">Unlock for all</string>
    <string name="settings">Settings</string>
    <string name="manage_settings">manage_settings\n</string>
    <string name="auto_lock_delay">auto_lock_delay</string>
    <string name="Auto_lock_delay">auto_lock_delay</string>
    <string name="_1_touch_locking">1 touch Locking</string>
    <string name="keypress_beep">KeyPress Beep</string>
    <string name="change_pin">Change pin</string>
    <string name="information">Information</string>
    <string name="name">Name</string>
    <string name="front_door">Front Door</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="delete_lock">Delete Lock</string>
    <string name="Manage_settings">manage_settings</string>

</resources>
