<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/img_f">

    <TextView
        android:id="@+id/pinDisplay"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:drawable/edit_text"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/Pin"
        android:textSize="28sp"
        android:textStyle="bold" />

    <!-- Keypad Layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/_2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/_3"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/_4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/_5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/_6"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/_7"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/_8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/_9"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/Back"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/_0"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnEnter"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/ok"
                android:textSize="20sp" />
        </LinearLayout>
        <Button
            android:id="@+id/btnLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lock Door"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>
