<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/img_f" >

    <TextView
        android:id="@+id/statusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_status"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/statusBox"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/unknown"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/refreshBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_status" />
</LinearLayout>
